Added support for STOP key and smart lock

--- a/BLERemote/index.html
+++ b/BLERemote/index.html
@@ -263,6 +263,14 @@
                     </div>
                 </div>
                 
+				<div class="smart-lock">
+                    <h4>Smart Lock</h4>
+                    <div class="command-input">
+                        <input type="text" id="smart-password" placeholder="Enter your Password">
+                        <button id="lock-command" class="btn">Lock</button>
+                        <button id="unlock-command" class="btn">Unlock</button>						
+                    </div>
+                </div>
                 <!-- Console Section -->
                 <div class="console-section">
                     <h4>Console</h4>
