Added new buttons
Added new buttons and modified commands

--- a/BLERemote/index.html
+++ b/BLERemote/index.html
@@ -75,12 +75,14 @@
                             <button class="control-btn" data-command="backward">↓</button>
                             <button class="control-btn diagonal" data-command="backright">↘</button>
                         </div>
-                        <div class="special-controls">
-                            <button class="control-btn" data-command="turnleft">↺</button>
-                            <button class="control-btn" data-command="turnright">↻</button>
-                            <button class="control-btn" data-command="curvedtrajectory">⌒</button>
-                            <button class="control-btn" data-command="lateralarc">⇄</button>
-                        </div>
+						<div class="special-controls">
+							<button class="control-btn" data-command="turnleft">↺</button>
+							<button class="control-btn" data-command="turnright">↻</button>
+							<button class="control-btn" data-command="curvedtrajectoryRight">⌒→</button>
+							<button class="control-btn" data-command="lateralarcRight">⇄→</button>
+							<button class="control-btn" data-command="curvedtrajectoryLeft">←⌒</button>
+							<button class="control-btn" data-command="lateralarcLeft">←⇄</button>
+						</div>
                     </div>
                     <div class="speed-controls">
                         <h4>Speed</h4>
@@ -186,12 +188,14 @@
                             <button class="control-btn" data-command="backward">↓</button>
                             <button class="control-btn diagonal" data-command="backright">↘</button>
                         </div>
-                        <div class="special-controls">
-                            <button class="control-btn" data-command="turnleft">↺</button>
-                            <button class="control-btn" data-command="turnright">↻</button>
-                            <button class="control-btn" data-command="curvedtrajectory">⌒</button>
-                            <button class="control-btn" data-command="lateralarc">⇄</button>
-                        </div>
+						<div class="special-controls">
+							<button class="control-btn" data-command="turnleft">↺</button>
+							<button class="control-btn" data-command="turnright">↻</button>
+							<button class="control-btn" data-command="curvedtrajectoryRight">⌒→</button>
+							<button class="control-btn" data-command="lateralarcRight">⇄→</button>
+							<button class="control-btn" data-command="curvedtrajectoryLeft">←⌒</button>
+							<button class="control-btn" data-command="lateralarcLeft">←⇄</button>
+						</div>
                     </div>
                     <div class="speed-controls">
                         <h4>Speed</h4>
