minor changes for actions

--- a/BLERemote/index.html
+++ b/BLERemote/index.html
@@ -234,7 +234,15 @@
                             <button class="auto-btn" data-mode="RotateNeck">Rotate Neck</button>
                             <button class="auto-btn" data-mode="Twist">Twist</button>
                             <button class="auto-btn" data-mode="Down">Down Action</button>
-							<button class="auto-btn" data-mode="Wink">Wink</button>							
+							<button class="auto-btn" data-mode="leftturn">left turn</button>
+							<button class="auto-btn" data-mode="rightturn">right turn</button>
+							<button class="auto-btn" data-mode="backward">backward</button>	
+							<button class="auto-btn" data-mode="forward">forward</button>	
+							<button class="auto-btn" data-mode="Wink">Wink</button>											
+                            <button class="auto-btn" data-mode="joint3">joint3</button>
+                            <button class="auto-btn" data-mode="joint7">joint7</button>
+                            <button class="auto-btn" data-mode="joint5">joint5</button>
+							<button class="auto-btn" data-mode="joint9">joint9</button>						
                         </div>
                         <button id="stop-auto" class="btn stop-btn">Stop Action</button>
                     </div>
