--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -141,8 +141,7 @@ document.body.appendChild(el);
       </div>
       <div class="icon" id="deviceSelect">
         <select id="device_selector">
-          <option value="ESP32">ILS-mega</option>		
-          <option value="ESP8266">ILS-mini</option>
+          <option value="ESP32">Mega</option>		
         </select>
         <button id="runButton" class="notext primary icon" title="..."></button>
       </div>
