--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -141,8 +141,12 @@ document.body.appendChild(el);
       </div>
       <div class="icon" id="deviceSelect">
         <select id="device_selector">
-          <option value="ESP32">Mega</option>		
+          <option value="ESP32">ESP32</option>
+          <option value="ESP8266">8266</option>		  
+          <option value="wemos_d1_mini">Mini</option>		  		  		
         </select>
+		
+
         <button id="runButton" class="notext primary icon" title="..."></button>
       </div>
 
