Fix USB Driver path
Keep only relevant driver path

--- a/blockcoding/bipes-ILS/BIPES/ui/flash/webtools.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/flash/webtools.html
@@ -322,11 +322,7 @@
       <ul>
         <li>
           CP2102 (square chip):
-          <a href="https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers">driver</a>
-        </li>
-        <li>
-          CH341:
-          <a href="https://github.com/nodemcu/nodemcu-devkit/tree/master/Drivers">driver</a>
+          <a href="https://www.silabs.com/documents/public/software/CP210x_Windows_Drivers.zip">driver</a>
         </li>
       </ul>
 
