--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -116,7 +116,8 @@ document.body.appendChild(el);
   <script src="jsCv/v30.js"></script>
   <script src="jsCv/v30/python.js"></script>
   <script src="jsCv/v30/blocks.js"></script>
-
+  <script src="custom_category.js"></script>
+  <link rel="stylesheet" href="custom_style.css">
 
 </head>
 <body>
