--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -146,7 +146,8 @@ document.body.appendChild(el);
         <select id="device_selector">
           <option value="ESP32">ESP32</option>
           <option value="ESP8266">8266</option>		  
-          <option value="wemos_d1_mini">Mini</option>		  		  		
+          <option value="wemos_d1_mini">Mini</option>
+          <option value="UnoESP32">UNO-ESP32</option>		  		  				  
         </select>
 		
 
