Add Brand kit UI colors

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -124,7 +124,7 @@ document.body.appendChild(el);
 
   <div class="top-menu">
 
-    <div class="logo"></div>
+        <div class="logo"><img id="logo" src="media/logo.png"></div>
       <div class="tabs">
         <div id="tab_blocks" class="tabon">...</div>
         <div id="tab_console" class="taboff">Console</div>
@@ -621,7 +621,7 @@ cursor: pointer;
 
 .modal-header {
 padding: 2px 16px;
-background-color: #4d4dff;
+background-color: #31a574;
 color: white;
 }
 
@@ -629,7 +629,7 @@ color: white;
 
 .modal-footer {
 padding: 2px 16px;
-background-color: #4d4dff;
+background-color: #31a574;
 color: white;
 }
 </style>
