Added major changes.
1. Resolve all reset issues,
2. Make BLE work with prefix as "BLE"
3. Freeboard works for serial data,

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -385,9 +385,9 @@ document.body.appendChild(el);
 
 <!-- ################################################## -->
 
-  <div id="content_iot" class="content">
-     <iframe id="content_iot" src="freeboard/index.html" width="100%" height="100%" frameBorder="0"></iframe>
-  </div>
+<div id="content_iot" class="content">
+  <iframe id="iframe_iot" src="freeboard/index.html" width="100%" height="100%" frameBorder="0"></iframe>
+</div>
 
 <!-- ################################################## -->
 
