Add support for IOT Dashboard

--- a/blockcoding/bipes-ILS/BIPES/ui/freeboard/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/freeboard/index.html
@@ -435,6 +435,10 @@
             "../core/queue.js", //BIPES queue to receive data from serial port 
             "js/freeboard.bipesSerialDatasource.js",
             "js/freeboardRandomDataSource.js",
+			"https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js",
+			"js/freeboard.mqttWebSocketPlugin.js",
+			"js/freeboard.mqttPublishButton.js",
+			"js/freeboard.iotEducationPlugin.js",
 
             // *** Load more plugins here ***
             function() {
