Add support for display modules

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -86,7 +86,30 @@ function checkCookie() {
   <!-- Extensions -->
   <script src="extensions/oled/blocks.js"></script>
   <script src="extensions/oled/generators.js"></script>
+
+  <script src="extensions/tm1637/blocks.js"></script>
+  <script src="extensions/tm1637/generators.js"></script>
   
+  <script src="extensions/max7219/blocks.js"></script>
+  <script src="extensions/max7219/generators.js"></script>
+  
+  <script src="extensions/neopixel/blocks.js"></script>
+  <script src="extensions/neopixel/generators.js"></script>
+  
+  <script src="extensions/lcd/blocks.js"></script>
+  <script src="extensions/lcd/generators.js"></script>
+  
+  <script src="extensions/stepper/blocks.js"></script>
+  <script src="extensions/stepper/generators.js"></script>  
+  
+  <script src="extensions/dcmotor/blocks.js"></script>
+  <script src="extensions/dcmotor/generators.js"></script>  
+  
+  <script src="extensions/servomotor/blocks.js"></script>
+  <script src="extensions/servomotor/generators.js"></script>  
+  
+  <script src="extensions/rtttl/blocks.js"></script>
+  <script src="extensions/rtttl/generators.js"></script>  
   <!-- xterm part -->
   <script src="core/xterm.js?ver=4.13.0"></script>
 
