Add support for more devices

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -110,6 +110,43 @@ function checkCookie() {
   
   <script src="extensions/rtttl/blocks.js"></script>
   <script src="extensions/rtttl/generators.js"></script>  
+
+  <script src="extensions/joystick/blocks.js"></script>
+  <script src="extensions/joystick/generators.js"></script>    
+  
+  <script src="extensions/keypad/blocks.js"></script>
+  <script src="extensions/keypad/generators.js"></script>      
+
+  <script src="extensions/ultrasonic/blocks.js"></script>
+  <script src="extensions/ultrasonic/generators.js"></script>     
+
+  <script src="extensions/rfid/blocks.js"></script>
+  <script src="extensions/rfid/generators.js"></script>       
+
+  <script src="extensions/rotary_encoder/blocks.js"></script>
+  <script src="extensions/rotary_encoder/generators.js"></script>     
+  
+  <script src="extensions/ds1820/blocks.js"></script>
+  <script src="extensions/ds1820/generators.js"></script>       
+
+  <script src="extensions/DHT11_22/blocks.js"></script>
+  <script src="extensions/DHT11_22/generators.js"></script>       
+
+  <script src="extensions/MPU6050_IMU/blocks.js"></script>
+  <script src="extensions/MPU6050_IMU/generators.js"></script>       
+
+  <script src="extensions/max30100/blocks.js"></script>
+  <script src="extensions/max30100/generators.js"></script>       
+
+  <script src="extensions/gps/blocks.js"></script>
+  <script src="extensions/gps/generators.js"></script>     
+
+  <script src="extensions/bmp180/blocks.js"></script>
+  <script src="extensions/bmp180/generators.js"></script>    
+  
+  <script src="extensions/sensor_generic/blocks.js"></script>
+  <script src="extensions/sensor_generic/generators.js"></script>    
+  
   <!-- xterm part -->
   <script src="core/xterm.js?ver=4.13.0"></script>
 
