Add support for pushbutton

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -146,7 +146,9 @@ function checkCookie() {
   
   <script src="extensions/sensor_generic/blocks.js"></script>
   <script src="extensions/sensor_generic/generators.js"></script>    
-  
+
+  <script src="extensions/pushbutton/blocks.js"></script>
+  <script src="extensions/pushbutton/generators.js"></script>      
   <!-- xterm part -->
   <script src="core/xterm.js?ver=4.13.0"></script>
 
