Added LED Control

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -149,6 +149,9 @@ function checkCookie() {
 
   <script src="extensions/pushbutton/blocks.js"></script>
   <script src="extensions/pushbutton/generators.js"></script>      
+
+  <script src="extensions/led_control/blocks.js"></script>
+  <script src="extensions/led_control/generators.js"></script>        
   <!-- xterm part -->
   <script src="core/xterm.js?ver=4.13.0"></script>
 
