Add more components

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -152,6 +152,22 @@ function checkCookie() {
 
   <script src="extensions/led_control/blocks.js"></script>
   <script src="extensions/led_control/generators.js"></script>        
+  
+  <script src="extensions/http/blocks.js"></script>
+  <script src="extensions/http/generators.js"></script>     
+  
+  <script src="extensions/email/blocks.js"></script>
+  <script src="extensions/email/generators.js"></script>      
+  
+  <script src="extensions/mqtt/blocks.js"></script>
+  <script src="extensions/mqtt/generators.js"></script>  
+
+  <script src="extensions/googlesheet/blocks.js"></script>
+  <script src="extensions/googlesheet/generators.js"></script>  
+  
+  <script src="extensions/tcpip/blocks.js"></script>
+  <script src="extensions/tcpip/generators.js"></script>  
+  
   <!-- xterm part -->
   <script src="core/xterm.js?ver=4.13.0"></script>
 
