--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -168,6 +168,9 @@ function checkCookie() {
   <script src="extensions/tcpip/blocks.js"></script>
   <script src="extensions/tcpip/generators.js"></script>  
   
+  <script src="extensions/remote_control/blocks.js"></script>
+  <script src="extensions/remote_control/generators.js"></script>  
+  
   <!-- xterm part -->
   <script src="core/xterm.js?ver=4.13.0"></script>
 
