Added support for uno version 2

--- a/blockcoding/bipes-ILS/BIPES/ui/index.html
+++ b/blockcoding/bipes-ILS/BIPES/ui/index.html
@@ -310,7 +310,8 @@ document.body.appendChild(el);
       </div>
       <div class="icon" id="deviceSelect">
         <select id="device_selector">
-          <option value="UnoESP32">UNO-ESP32</option>		  		  				  
+          <option value="UNOESP32-V1">UNO-ESP32-V1</option>		 
+		  <option value="UNOESP32-V2">UNO-ESP32-V2</option>			  
         </select>
 		
 
